--- a/app/src/main/res/layout/activity_flashcard.xml
+++ b/app/src/main/res/layout/activity_flashcard.xml
@@ -44,16 +44,16 @@
         app:layout_constraintStart_toStartOf="@id/tvTitle"
         app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
-    <ImageView
-        android:id="@+id/btnMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:padding="8dp"
-        android:src="@drawable/ic_more_vert"
-        app:layout_constraintBottom_toBottomOf="@id/btnBack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btnBack" />
+<!--    <ImageView-->
+<!--        android:id="@+id/btnMenu"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:padding="8dp"-->
+<!--        android:src="@drawable/ic_more_vert"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/btnBack"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@id/btnBack" />-->
 
     <!-- Progress -->
     <TextView
