--- a/app/src/main/res/layout/item_module_detail.xml
+++ b/app/src/main/res/layout/item_module_detail.xml
@@ -52,6 +52,7 @@
                     app:tint="#777777" />
 
                 <TextView
+                    android:id="@+id/tvWordCount"
                     android:text="25 words"
                     android:textSize="13sp"
                     android:textColor="#777777"
