--- a/app/src/main/res/layout/item_module_detail.xml
+++ b/app/src/main/res/layout/item_module_detail.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -65,41 +66,16 @@
                 android:layout_width="16dp"
                 android:layout_height="1dp" />
 
-<!--            &lt;!&ndash; TIME ICON + TEXT &ndash;&gt;-->
-<!--            <LinearLayout-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:gravity="center_vertical">-->
-
-<!--                <ImageView-->
-<!--                    android:src="@drawable/ic_time"-->
-<!--                    android:layout_width="16dp"-->
-<!--                    android:layout_height="16dp"-->
-<!--                    android:layout_marginEnd="4dp"-->
-<!--                    app:tint="#777777" />-->
-
-<!--                <TextView-->
-<!--                    android:text="5 min"-->
-<!--                    android:textSize="13sp"-->
-<!--                    android:textColor="#777777"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content" />-->
-<!--            </LinearLayout>-->
-
-            <!-- SPACING -->
-            <Space
-                android:layout_width="16dp"
-                android:layout_height="1dp" />
-
-            <!-- CHECK ICON + TEXT -->
+            <!-- STATUS ICON + TEXT -->
             <LinearLayout
+                android:id="@+id/layoutStatus"
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical">
 
                 <ImageView
+                    android:id="@+id/ivStatusIcon"
                     android:src="@drawable/ic_check"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
@@ -107,6 +83,7 @@
                     app:tint="#4CAF50" />
 
                 <TextView
+                    android:id="@+id/tvStatusText"
                     android:text="Completed"
                     android:textSize="13sp"
                     android:textColor="#4CAF50"
